# python-api

./: .gitignore  Makefile  README.md  alembic.ini.tmpl  config.py.tmpl  db.py  main.py  mypy.ini  pyproject.toml  requirements.txt
alembic/versions/: 0361a1290b7a_create_initial_tables.py
api/: items_api.py
data/: items.py
server/: db.py  main.py
server/api/: items_api.py
tests/: test_async.py  test_item.py  test_server.py
