[tool.poetry]
name = "borkapi"
version = "0.1.0"
description = ""
authors = ["Tuukka Haapasalo <tuukka.haapasalo@reaktor.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.4.2"
asgi-lifespan = "^2.1.0"
alembic = "^1.12.0"
fastapi = "^0.103.2"
greenlet = "^3.0.0"
black = "^23.10.0"
httpx = "^0.25.0"
pytest = "^7.4.2"
mypy = "^1.6.1"
uvicorn = "^0.23.2"
asyncpg = "^0.28.0"
sqlalchemy = "^2.0.22"
pytest-asyncio = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
